Some attempt at using multinap for URL query params